facet-args/tests/integration/snapshots/main__integration__subcommand__missing_nested_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: err.to_string()
---
error: expected a subcommand

available subcommands:
  generate  Generate CI workflow files from Rust code
