facet-args/tests/integration/snapshots/main__integration__subcommand__missing_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: err.to_string()
---
error: expected a subcommand

available subcommands:
  start  Start the service
  stop   Stop the service
