facet-args/tests/integration/snapshots/main__integration__subcommand__unknown_nested_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: err.to_string()
---
error: unknown subcommand `unknown`

available subcommands:
  generate  Generate CI workflow files from Rust code
