facet-args/tests/integration/snapshots/main__integration__subcommand__unknown_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: err.to_string()
---
error: unknown subcommand `unknown`

available subcommands:
  start  Start the service
  stop   Stop the service
